syntax = "proto3";

package openapi.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "OpenAPI Demo Service";
    version: "1.0";
    description: "A service that demonstrates OpenAPI v2 annotations";
  };
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/v1/products/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get a product by ID";
      description: "Retrieves a single product by its unique identifier";
      tags: "Products";
    };
  }

  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List all products";
      description: "Retrieves a paginated list of products";
      tags: "Products";
    };
  }
}
